Fixed layout issue on the front-page. Updated the rest of dashboard available views.

--- a/src/Dso/HomeBundle/Resources/public/css/a_local.css
+++ b/src/Dso/HomeBundle/Resources/public/css/a_local.css
@@ -5877,10 +5877,6 @@ body {
   margin-top: 70px;
 }
 
-#wrapper {
-  padding-left: 0;
-}
-
 #page-wrapper {
   width: 100%;
   padding: 5px 15px;
@@ -5938,11 +5934,6 @@ table.tablesorter thead tr th:hover {
 @media (min-width:768px) {
 
   /* Wrappers */
-
-  #wrapper {
-	padding-left: 225px;
-  }
-
   #page-wrapper {
 	padding: 15px 25px;
   }
